--- a/1. Thread basics.ipynb
+++ b/1. Thread basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,21 +50,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threads started!\n"
+     ]
+    }
+   ],
    "source": [
     "t1.start()\n",
     "t2.start()\n",
     "t3.start()\n",
-    "print(\"Threads stated!\")"
+    "print(\"Threads started!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Returning data from site: Google!Returning data from site: Microsoft!Returning data from site: Yahoo!\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "t1.join()\n",
     "t2.join()\n",
@@ -80,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +125,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threads started!\n"
+     ]
+    }
+   ],
    "source": [
     "t1.start()\n",
     "t2.start()\n",
     "t3.start()\n",
-    "print(\"Threads stated!\")"
+    "print(\"Threads started!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Returning data from site: Google!Returning data from site: Yahoo!\n",
+      "\n",
+      "Returning data from site: Microsoft!\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1.join()\n",
+    "t2.join()\n",
+    "t3.join()"
    ]
   },
   {
@@ -122,11 +169,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "t1.join()\n",
-    "t2.join()\n",
-    "t3.join()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
